--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Introduction-->
     <section>
     <div class="profile-picture-container">
-      <img src="/profile2.jpg" alt="Joyce - Profile Photo" width="300" height="300" class="profile-picture" />
+      <img src="https://github.com/cocomon2019/Portfolio-Project/blob/main/images/Profile2.jpg" alt="Joyce - Profile Photo" width="300" height="300" class="profile-picture" />
     </div>
     
     <h1>Greetings! I'm Joyce Tao from Los Angeles, California. </h1>
