--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h1>Greetings! I'm Joyce Tao from Los Angeles, California. </h1>
     <!--About Me-->
   <h2> About Me </h2>
-    <p> I am trilingual analyst with over 15+ years of experience interpreting policy and analyzing data in the financial section. For the two years, I found my interests are passion in data analytic and web development. My goal is to use my passion and knowledge to solve problems and develop new projects. 
+    <p> I am trilingual analyst with over 15+ years of experience interpreting policy and analyzing data in the financial sector. For the two years, I found my interests are passion in data analytic and web development. My goal is to use my passion and knowledge to solve problems and develop new projects. 
     </p>
     
     </article>
