--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li>Project</li>
           <li>Travel</li>
           <li>Los Angeles</li>
-          <li>Foodie</li>
+          <li>Places to Eat</li>
         </ul>
     </article>
 
