--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </p>
 <!--for Nav Bar later-->
         <ul>
-          <li>Project</li>
+          <li>Projects</li>
           <li>Travel</li>
           <li>Los Angeles</li>
           <li>Places to Eat</li>
